# fisage

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
config/: settings.py
graph/: connection.py
src/config/: settings.py
src/graph/: connection.py
src/ingestion/base/: __init__.py  base_loader.py
src/ingestion/loaders/: fortune1000.py  sp500.py
src/ingestion/utils/: normalization.py
src/utils/: logging_config.py
tests/integration/: test_neo4j_connection.py
tests/unit/ingestion/utils/: test_normalization.py
