[project]
name = "finsage"
version = "0.1.0"
description = "Financial Knowledge Graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "neo4j>=6.1.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "B",  # bugbear
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml"]
